--- a/components/carousel-vertical/carousel-vertical.css
+++ b/components/carousel-vertical/carousel-vertical.css
@@ -1,26 +1,55 @@
 .carousel-vertical-container {
     position: relative;
-    width: 300px;
+    width: 100%;
     height: 200px;
     overflow: hidden;
 }
 .carousel-vertical-wrap {
     width: 100%;
     height: 100%;
+    transform: translate(0, -100%);
 }
 
 .carousel-vertical-wrap__dynamic {
-    transition: transform 500ms ;
+    transition: transform 1000ms ;
 }
 
 .carousel-vertical-item {
     display: inline-block;
     width: 100%;
     height: 100%;
-    background-color: #f0f;
     text-align: center;
-    color: #fff;
+    color: #000;
 }
+
+.carousel-vertical-item:nth-child(2),
+.carousel-vertical-item:nth-child(10){
+    background-color:red;
+}
+.carousel-vertical-item:nth-child(3) {
+    background-color:yellow;
+}
+.carousel-vertical-item:nth-child(4) {
+    background-color:blue;
+}
+.carousel-vertical-item:nth-child(5) {
+    background-color:hotpink;
+}
+.carousel-vertical-item:nth-child(6) {
+    background-color:gray;
+}
+.carousel-vertical-item:nth-child(7) {
+    background-color: greenyellow;
+}
+.carousel-vertical-item:nth-child(8) {
+    background-color: blueviolet;
+}
+.carousel-vertical-item:nth-child(9),
+.carousel-vertical-item:nth-child(1)  {
+    background-color:green;
+}
+
+
 
 /* 控制器 */
 .carousel-vertical-control {
