--- a/views/index/index.html
+++ b/views/index/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no"/>
-    <title>react 页面</title>
+    <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no" />
+    <title>我的react项目</title>
   </head>
   <body>
-      <div id="root">
-      </div>
+    <div id="root">
+      <button id="btn" class="btn">点我</button>
+    </div>
   </body>
 </html>
